# ai-monopoly

./: .env.example  .gitignore  BUG_FIXES_SUMMARY.md  Makefile  README.md  deploy.sh
backend/: .dockerignore  .env.example  CRITICAL_BUG_REPORT.md  Dockerfile  TEST_PLAYTHROUGH_REPORT.md  check_money.py  pyproject.toml  test_event_validation.py  test_full_playthrough.py  test_game.py  test_game_creation.py  test_sprint5_final.py  test_websocket_connection.py
backend/src/monopoly/agents/: __init__.py  base.py  context.py  gemini_agent.py  openai_agent.py  personalities.py  random_agent.py
backend/src/monopoly/api/: README.md  __init__.py  main.py  models.py  routes.py  storage.py  websocket.py
backend/src/monopoly/engine/: bank.py  board.py  cards.py  dice.py  game.py  player.py  rules.py  trade.py  types.py
backend/src/monopoly/orchestrator/: __init__.py  event_bus.py  game_runner.py  game_runner.py.bak  turn_manager.py
backend/tests/: conftest.py
backend/tests/agents/: test_context.py  test_gemini_agent.py  test_openai_agent.py  test_personalities.py  test_random_agent.py
backend/tests/engine/: test_bank.py  test_board.py  test_cards.py  test_dice.py  test_game.py  test_player.py  test_rules.py  test_trade.py
backend/tests/integration/: test_api_endpoints.py  test_game_runner.py  test_websocket.py
backend/tests/orchestrator/: test_event_bus.py
docs/: AGENT_CONVERSATIONS_TODO.md  ASSET_PANEL_EXAMPLE.md  DATA_FLOW_INSPECTION.md  EXAMPLE_GAMEPLAY.md  agent-design.md  api-specification.md  architecture.md  data-models.md  data_packet.md  project-memory.md  (+2 more)
(+21 files in other folders)
